--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="WBSEDCL bill calculator, WBSEDCL tariff, Anol KR Ghosh, Anol Ghosh portfolio, electricity bill estimate, tiered tariff calculator, domestic consumption, commercial tariff, INR cost calculation">
     <!-- End SEO -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
     <style>
         /* Modernized Base Styles */
